# storage/api-docs/api-docs.json
@@ -8,10 +8,46 @@
         "/api/sattelites/all_satellites": {
             "get": {
                 "tags": [
-                    "Satellite"
+                    "Satellites"
                 ],
                 "description": "Get all satellites information",
                 "operationId": "4013dbb23f35e70dd3d7926a033b76b2",
+                "responses": {
+                    "200": {
+                        "description": "Ok"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    },
+                    "500": {
+                        "description": "Server Error"
+                    }
+                }
+            }
+        },
+        "/api/launchpad_satellites": {
+            "get": {
+                "tags": [
+                    "Satellites"
+                ],
+                "description": "Get satellites by launcpad id",
+                "operationId": "9eab4e05d328ed70d7790dffee611ff0",
+                "parameters": [
+                    {
+                        "name": "launchpad_id",
+                        "in": "query",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "Ok"
@@ -64,6 +100,32 @@
                 ],
                 "description": "Get all status information",
                 "operationId": "39a1424d3497719e7dafb2bb22048526",
+                "responses": {
+                    "200": {
+                        "description": "Ok"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    },
+                    "500": {
+                        "description": "Server Error"
+                    }
+                }
+            }
+        },
+        "/api/all_launchpads": {
+            "get": {
+                "tags": [
+                    "Launchpads"
+                ],
+                "description": "Get all launchpads information",
+                "operationId": "2dc032fb6d7721371d031c8ea99c558d",
                 "responses": {
                     "200": {
                         "description": "Ok"
